Cleanup, additional fixes, anchor & multi line support